--- a/index.html
+++ b/index.html
@@ -37,20 +37,12 @@
         #header-title { color: var(--private-msg-color); font-weight: bold; font-size: clamp(1rem, 4vw, 1.25rem); }
         #clear-history-btn { display: none; background-color: var(--danger-color); color: white; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-size: 0.8rem; }
         .messages { list-style-type: none; margin: 0; padding: 15px; position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow-y: auto; font-size: clamp(0.9rem, 2.5vw, 1rem); }
-        
-        /* --- BLOK ZMIAN STYLU --- */
         .system-message, .user-message, .private-message { padding-bottom: 8px; word-wrap: break-word; }
         .system-message { color: var(--text-muted-color); font-style: italic; text-align: center; }
-        /* Domyślny kolor tekstu wiadomości ustawiony na biały */
         .user-message, .private-message { color: var(--text-color); }
-        /* Wiadomości prywatne są dodatkowo pochylone */
         .private-message { font-style: italic; }
-        /* Kolor niebieski dla nazwy użytkownika na czacie publicznym */
         .user-message .username-color { color: var(--accent-color); font-weight: bold; }
-        /* Kolor złoty dla nazwy użytkownika w wiadomości prywatnej */
         .private-message .username-color { color: var(--private-msg-color); font-weight: bold; }
-        /* --- KONIEC BLOKU ZMIAN --- */
-
         #input { flex-grow: 1; padding: 12px; border: 1px solid var(--border-color); background-color: #40444b; color: var(--text-color); border-radius: 8px; font-size: 1rem; }
         #form button { padding: 12px 18px; margin-left: 10px; border: none; background-color: var(--accent-color); color: var(--text-color); border-radius: 8px; cursor: pointer; font-weight: bold; }
         .tab-button { width: 100%; background: none; border: none; color: var(--text-muted-color); padding: 10px; text-align: left; cursor: pointer; border-radius: 5px; margin-bottom: 2px; font-size: clamp(0.8rem, 2.5vw, 0.9rem); transition: background-color 0.2s; white-space: nowrap; position: relative; }
@@ -155,7 +147,6 @@
                 i.className = 'system-message';
                 i.textContent = data.message;
             } else {
-                // Ta linia decyduje, czy wiadomość dostanie styl .user-message czy .private-message
                 i.className = isPrivate ? 'private-message' : 'user-message';
                 i.innerHTML = `<span class="username-color">${data.username}</span>: ${data.message}`;
             }
@@ -182,7 +173,12 @@
         function showLoginForm(slot, targetUsername, isNewUser = false) { removeActiveForms(); const form = document.createElement('form'); form.className = 'form-inline'; const passwordPlaceholder = isNewUser ? "Wymyśl hasło (puste = gość)" : "Podaj hasło"; form.innerHTML = isNewUser ? `<input type="text" name="username" placeholder="Twoja nazwa..." required autocomplete="off">` : ''; form.innerHTML += `<input type="password" name="password" placeholder="${passwordPlaceholder}" autocomplete="new-password"><button type="submit">${isNewUser ? 'Dołącz' : 'Zaloguj'}</button>`; form.onclick = (e) => e.stopPropagation(); const nameElement = slot.querySelector('.user-name'); if (nameElement) nameElement.style.cursor = 'default'; form.onsubmit = (e) => { e.preventDefault(); const uname = isNewUser ? form.querySelector('[name="username"]').value.trim() : targetUsername; const pword = form.querySelector('[name="password"]').value.trim(); if (uname) { socket.send(JSON.stringify({ type: 'join', payload: { username: uname, password: pword } })); removeActiveForms(); } }; slot.appendChild(form); form.querySelector(isNewUser ? 'input[name="username"]' : 'input[type="password"]').focus(); }
         function createRegistrationSlot() { ui.newUserSlot.innerHTML = ''; const slot = document.createElement('div'); slot.className = 'user-slot'; const header = document.createElement('div'); header.className = 'user-slot-header'; header.innerHTML = '<span class="user-name" style="color: var(--text-muted-color);">Dołącz do czatu...</span>'; slot.appendChild(header); header.onclick = () => { header.style.display = 'none'; showLoginForm(slot, '', true); }; ui.newUserSlot.appendChild(slot); }
         function resetSession() { sessionUsername = null; isModerator = false; renderUsers(allUsers); }
-        function openPrivateChat(targetUser) { createChatWindow(targetUser, `Priv: ${targetUser}`); switchChat(targetUser); }
+        // ZAKTUALIZOWANA FUNKCJA: Prosi serwer o historię rozmowy
+        function openPrivateChat(targetUser) {
+            createChatWindow(targetUser, `Priv: ${targetUser}`);
+            switchChat(targetUser);
+            socket.send(JSON.stringify({ type: 'request_private_history', payload: { partner: targetUser } }));
+        }
         async function loadHistory() { try { const r = await fetch(historyUrl); const h = await r.json(); h.forEach(m => addMessage(m, 'public')); } catch (e) { console.error(e); } }
         
         function connectWebSocket() {
@@ -200,10 +196,18 @@
                     lastPrivateChatPartner = chatPartner;
                     ui.privateChatIndicator.textContent = chatPartner;
                     ui.privateChatIndicator.style.display = 'inline-block';
-                    if (activeChat !== chatPartner) {
-                        ui.privateChatIndicator.classList.add('has-unread');
-                        const tab = document.getElementById(`tab-private-${chatPartner}`);
-                        if(tab) tab.classList.add('has-unread');
+                    if (activeChat !== chatPartner) { ui.privateChatIndicator.classList.add('has-unread'); const tab = document.getElementById(`tab-private-${chatPartner}`); if(tab) tab.classList.add('has-unread'); }
+                }
+                // NOWY HANDLER: Odbiera i wyświetla historię prywatną
+                else if (data.type === 'private_history_data') {
+                    const partner = data.payload.partner;
+                    const history = data.payload.history;
+                    const messagesDiv = document.getElementById(`messages-${partner}`);
+                    if (messagesDiv) {
+                        messagesDiv.innerHTML = ''; // Wyczyść okno przed załadowaniem historii
+                        history.forEach(msg => {
+                            addMessage({ username: msg.sender, message: msg.message }, partner);
+                        });
                     }
                 }
                 else if (data.type === 'history_cleared') { const publicChat = document.getElementById('messages-public'); if(publicChat) publicChat.innerHTML = ''; addMessage({username:'System', message:'Czat został wyczyszczony'}, 'public');}
